[gd_scene load_steps=4 format=3 uid="uid://pqqvyvpbfkng"]

[ext_resource type="Script" path="res://ui/spell_learning_layer.gd" id="1_oarb3"]
[ext_resource type="Theme" uid="uid://cx6gnti534wka" path="res://ui/ui_theme.tres" id="2_da2bx"]
[ext_resource type="Texture2D" uid="uid://bgd0dqm18hiq6" path="res://ui/images/dungeon_bg.png" id="3_408o0"]

[node name="SpellLearningLayer" type="CanvasLayer"]
script = ExtResource("1_oarb3")

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color(0.701961, 0.701961, 0.701961, 1)
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_da2bx")
texture = ExtResource("3_408o0")
expand_mode = 2
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -131.5
offset_top = 10.0
offset_right = 131.5
offset_bottom = 92.0
grow_horizontal = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "You have some time to learn from 
the Book or to repair the castle...
What do you do?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeCards" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 15

[node name="Confirm" type="Button" parent="."]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -91.0
offset_top = -51.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 4
theme = ExtResource("2_da2bx")
disabled = true
text = "Confirm"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_top = 264.0
offset_right = 640.0
offset_bottom = 320.0
mouse_filter = 2
theme = ExtResource("2_da2bx")
alignment = 1

[node name="UpgradeName" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Upgrade Name"
horizontal_alignment = 1

[node name="Description" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Short description goes here"
horizontal_alignment = 1

[connection signal="pressed" from="Confirm" to="." method="_on_confirm_pressed"]
